# autofxxk

./: .env.example  .gitignore  README.md  config.example.yaml  config_loader.py  main.py  pyproject.toml
.claude/: skills
.claude/skills/金融数据获取/: README.md  get_market_info.py  get_stock_data.py  requirements.txt  setup.sh
.opencode/agent/: 基本面分析.md  宏观分析.md  技术分析.md  金融分析.md
.opencode/skills/YouTube字幕提取/: SKILL.md  batch_download.py  convert_to_markdown.py  download_subtitle.py  requirements.txt  setup.sh
.opencode/skills/文件转换/: SKILL.md  batch_convert.py  convert_file.py  convert_with_llm.py  requirements.txt  setup.sh
.opencode/skills/金融数据获取/: SKILL.md  analyze_stock.py  get_financial_data.py  setup.sh
agents/: __init__.py  financial_analyst_team.py  fundamental_analysis_agent.py  macro_analysis_agent.py  technical_analysis_agent.py
utils/: reporting.py
